# DuckyAI

./: .github  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DuckyAI.code-workspace  GETTING_STARTED.md  Home.md  README.md  duckyai.yml  es-metadata.yml  orchestrator.yaml  owners.txt  package-lock.json  package.json  version.json
backend/: .dockerignore  Dockerfile.agent  MANIFEST.in  docker-compose.agent.yml  load-secrets.sh  pyproject.toml
backend/duckyai/: __init__.py  __main__.py  ado.py  chat_server.py  config.py  logger.py  markdown_utils.py  mcp_server.py  prereqs.py  services.py  terminal_server.py  worktree.py
backend/duckyai/.playbook/: Dockerfile.agent  copilot-instructions.md  duckyai.schema.json  duckyai.yml.template  nodes-defaults.yml
backend/duckyai/.playbook/prompts-agent/: Daily Note Prep (DNP).md  PR Review (PR).md  PR Scan (PRS).md  README_PROMPTS.md  Service Sync (SVC).md  Task Manager (TM).md  Teams Chat Summary (TCS).md  Teams Meeting Summary (TMS).md  Weekly Roundup Summary (WRS).md
backend/duckyai/.playbook/templates/: Daily Note Template.md
backend/duckyai/.vault-template/.obsidian/: community-plugins.json
backend/duckyai/.vault-template/Templates/: 1-on-1.md  Daily Note.md  Meeting.md
backend/duckyai/api/: __init__.py  routes_daemon.py  vault_service.py
backend/duckyai/main/: chat_cmd.py  cli.py  doctor.py  install_health.py  orch_cmd.py  orchestrator.py  service_cmd.py  setup.py  template.py  terminal_cmd.py  update.py  vault_cmd.py
backend/duckyai/orchestrator/: agent_registry.py  core.py  cron_scheduler.py  execution_manager.py  models.py  task_manager.py
backend/duckyai/scripts/: copilot_sdk_runner.py
backend/duckyai/tests/: test_api.py  test_markdown_utils.py  test_orchestrator_eic_integration.py
backend/duckyai/tests/fixtures/: test_limitless_template.md
backend/duckyai/tests/integration/: test_orchestrator_integration.py  test_tm_flow.py
backend/duckyai/tests/unit/: test_ado.py  test_config_services.py  test_copilot_sdk_runner.py  test_prereqs.py  test_quiet_hours.py  test_routes_vault.py  test_services.py  test_services_metadata.py  test_terminal_server.py  test_vault_registry.py  test_vault_service.py  test_worktree.py
backend/duckyai_cli/: __main__.py  chat_server.py  logger.py
backend/duckyai_cli/.playbook/: duckyai.yml.template
backend/duckyai_cli/.playbook/bases/: AI Analysis.base  AI Roundup.base  AI Tasks.base  Participants.base  Publish.base
backend/duckyai_cli/.playbook/prompts-agent/: PR Review (PR).md  PR Scan (PRS).md  README_PROMPTS.md  Task Manager (TM).md  Teams Chat Summary (TCS).md
backend/duckyai_cli/.playbook/templates/: Journal Template.md
backend/duckyai_cli/api/: routes_vault.py  server.py  vault_service.py
backend/duckyai_cli/main/: cli.py  orchestrator.py  setup.py  update.py  vault.py
backend/duckyai_cli/orchestrator/: agent_lock.py  agent_registry.py  core.py  cron_scheduler.py  execution_manager.py  file_monitor.py  models.py
backend/duckyai_cli/tests/: .gitignore  test_markdown_utils.py
backend/duckyai_cli/tests/unit/: test_routes_vault.py  (+3 more)
backend/duckyai_cli/voice/: realtime.py
backend/mcp-server/release-dashboard/: config.yaml  pyproject.toml
backend/scripts/: clone-ado-repos.sh
backend/scripts/manual-tests/: test_hot_reload_scenarios.py  test_orchestrator_execution.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
mcp-server/release-dashboard/: config.yaml  pyproject.toml
(+319 files in other folders)
