[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckyai"
version = "0.1.39"
description = "Personal Knowledge Management CLI framework"
authors = [{name = "DuckyAI Team"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.0.0",
    "croniter>=1.3.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "watchdog>=3.0.0",
    "claude-code-sdk>=0.0.20",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.32.0",
    "tzlocal>=5.3.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "mcp[cli]>=1.0.0",
    "github-copilot-sdk>=0.2.0",
    "psutil>=7.0.0",
    "websockets>=12.0",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
duckyai = "duckyai.main.cli:main"
duckyai-vault-mcp = "duckyai.mcp_server:main"

[project.urls]
Homepage = "https://github.com/kipackjeongMS/DuckyAI"
Repository = "https://github.com/kipackjeongMS/DuckyAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["duckyai*"]

[tool.setuptools.package-data]
duckyai = [
    ".playbook/**/*",
    ".playbook/*",
    ".vault-template/**/*",
    ".vault-template/*",
]

[tool.pytest.ini_options]
testpaths = ["duckyai/tests"]
