[package]
name = "duckyai-desktop"
version = "0.1.0"
description = "DuckyAI Voice — Desktop voice assistant"
authors = ["DuckyAI"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
base64 = "0.22"

